	- Aggiunto il salvataggio della data din un Contest
		- Modificato "HomeController" (addContest)
		- Modificato "AddContestForm" (aggiunta "deadline" ed eliminati campi year, month e day)
	
08-07-2018
	- Aggiunta la visualizzazione dei Tag più popolari durante la creazione di un Problema
		- Modificato TagDAO, TagDAOImpl, navbarTearcher
	- Creata Vista e Controller "myproblems" (url: /myProblems ) che mostra la lista dei Problemi CREATI dall'utente suddivisi per i rispettivi Contest
		- Modificato ProblemController, ContestDAO, ContestDAOImpl, ProblemDAO, ProblemDAOImpl
	- Adattata graficamente la Vista "myproblems", aggiunto button per modificare ed eliminare un Problema (da implementare in back-end)
		- Utilizzata libreria bootbox.js per il popup di alert e messaggi di conferme
		- Create le risorse (JS e CSS) per la Vista "myproblems"

09-07-2018
	- Aggiunta la possibilità di scaricare i TestCase nella pagina del problema, se questi sono stati abilitati dal Professore
		- Modificata "contest.jsp", "contest.css", "ContestController"
	- Aggiunta l'eliminazione di un Problema in back-end
		- Modificato "ProblemController", "Problem" (aggiunto le Submits per eliminazione in Cascade)
	- Aggiunta possibilità di modificare un Problema (front-end e chiamate Ajax back-end)
		- Modificato "ProblemController", "ProblemDAO", "ProblemDAOImpl", "Problem", "myproblems.jsp" (e script), "navbarTearcher.jsp"

10-07-2018
	- Fix modifica Problema
	- Aggiunta possibilità di clonare un Problema esistente in un altro Contest
		- Modificato "myproblems"
		- Modificato "ProblemController", ordinata la funzione e ottimizzato codice ripetuto
		- Modificato "myProblemsStyle" e "myProblemsScript"
		- Modificata "navbarTearcher" (valore di default per il timeout impostato a 5)
	- Fixato bug in "contest" per cui non si riusciva a visualizzare i problemi con più di uno spazio
		- Modificato "contest.js" (RegEx in .replace)
	
	
	
	
	
	