@@ -1,0 +1,7 @@
+@charset "ISO-8859-1";
+
+#downloadBtn
+{
+	float: right;
+	font-weight: bold;
+}
